@@ -93,8 +93,12 @@ gdb_test "f" ".*asmsrc2\[.\]s:8.*" "f in foo2"
 # `next' one insn (or macro) to set up our stackframe (for the following bt).
 gdb_test "n" "12\[ 	\]*.*foo3" "n in foo2"
 
-# See if a simple `bt' prints the right source files and doesn't fall off the stack.
-gdb_test "bt 10" "\#0.*foo2.*asmsrc2\[.\]s:12.*\#1.*main.*asmsrc1\[.\]s:33" "bt ALL in foo2"
+# See if a simple `bt' prints the right source files and 
+# doesn't fall off the stack.
+
+gdb_test "bt 10" \
+	"\#0.*foo2.*asmsrc2\[.\]s:12.*\#1.*main.*asmsrc1\[.\]s:33(.*\#2.*start\[^\r\n\]*)?" \
+	"bt ALL in foo2"
 
 # See if a capped `bt' prints the right source files.
 gdb_test "bt 2" "\#0.*foo2.*asmsrc2\[.\]s:12.*\#1.*main.*asmsrc1\[.\]s:33.*" "bt 2 in foo2"
